Fix navbar items to align appropriately

--- a/markup/index.html
+++ b/markup/index.html
@@ -9,6 +9,21 @@
   <link rel="stylesheet" href="../vendors/bootstrap-datepicker/css/datepicker3.css">
 </head>
 <body>
+  <section class="section-main">
+    <div class="sidebar-primary">
+      <div class="text-center">
+        <h1 class="logo">runway2street</h1>
+      </div>
+      <!-- Set of links categorized under accordions -->
+      <ul class="sidebar-menu">
+        <li><a href="#">Dashboard</a></li>
+        <li><a href="#">Designers </a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Returns</a></li>
+        <li><a href="#">Invoices</a></li>
+      </ul>
+    </div>
+    <div class="content-main">
   <header class="header-main">
     <nav class="nav-main">
       <ul class="nav-main--left">
@@ -40,7 +55,7 @@
       </ul>
       <ul class="nav-main--right">
         <li>
-          <a href="#">
+          <a href="#" class="navbar-search">
             <i class="fa fa-search"></i>
           </a>
         </li>
@@ -62,19 +77,6 @@
 
     </nav>
   </header>
-  <section class="section-main">
-    <div class="sidebar-primary">
-      <!-- Set of links categorized under accordions -->
-      <ul class="sidebar-menu">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Designers </a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Returns</a></li>
-        <li><a href="#">Invoices</a></li>
-      </ul>
-    </div>
-    <div class="content-main">
-
     </div>
 
   <footer class="footer-main">
