--- a/markup/index.html
+++ b/markup/index.html
@@ -25,7 +25,6 @@
         </ul>
         <li><i class="fa fa-credit-card"></i> <span>Orders</span> </li>
         <li><i class="fa fa-thumbs-o-up"></i> <span>Marketing</span> </li>
-        <li><i class="fa fa-cog"></i> <span>Settings</span> </li>
         <li id="collapse-sidebar"><i class="fa fa-chevron-left button-collapse-sidebar"></i> <span> Collapse</span> </li>
       </ul>
     </div>
@@ -39,9 +38,131 @@
             <li class="active"><a href="#">SS14</a></li>
           </ul>
         </div>
-        <div class="large-4 columns end">
-          <input type="search" placeholder="Search all data">
+        <div class="large-4 columns text-center">
+          <input type="search" class="search-box" placeholder="Search all data">
           <button class="btn btn-primary"><i class="fa fa-search"></i></button>
+        </div>
+        <div class="large-6 columns text-right end">
+          <div class="dropdown top-nav-icons">
+            <a data-toggle="dropdown" href="#"><i class="fa fa-bell-o"></i></a>
+            <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
+              <div class="notifications">
+                <header>Notifications (7 new) </header>
+                <div class="messages">
+                  <li class="unread">
+                     <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="https://5825abcc865e52b361d7-6c645f7f037343c7e349cc379f4554d8.ssl.cf1.rackcdn.com/designer/55/38/products/1773/193/210f0799f20a4a348c0383ccf09efa45_320x296_4.jpg" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <span>New designer onboarded - Xin </span>
+                        <p class="text-secondary">3 hours ago</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="https://5825abcc865e52b361d7-6c645f7f037343c7e349cc379f4554d8.ssl.cf1.rackcdn.com/designer/71/icouserdefault-2.jpg" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <span>New collection SS14 uploaded by Ayaka Nishi</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                      </a>
+                      <div class="media-body text-left">
+                        <h4 class="media-heading">Media heading</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                      </div>
+                   </div>
+                  </li>
+
+                </div>
+                <footer>See All</footer>
+              </div>
+            </ul>
+          </div>
+          <div class="dropdown avatar">
+            <a data-toggle="dropdown" href="#"><img src="http://s3.amazonaws.com/insightly.userfiles/325608/1452VJ/560dd118-e2d1-4922-9884-2e0888ccfa91.jpg" alt="" class="img-circle"></a>
+            <ul class="dropdown-menu pull-right text-left" role="menu" aria-labelledby="dLabel">
+              <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+              <li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
+              <li class="divider"></li>
+              <li><a href="#"><i class="fa fa-power-off"></i> Sign out</a></li>
+            </ul>
+          </div>
+
         </div>
       </header>
       <section class="section-content">
@@ -110,22 +231,11 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.1/jquery.slimscroll.min.js"></script>
     <script>
-      // $(function(){
-      //     $('.sidenav').slimScroll({
-      //         height: '150px'
-      //     });
-      // });
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script>
-      $('.dropdown-toggle').dropdown()
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.2.3/js/foundation.min.js"></script>
-    <script>
-        $(document).foundation();
-    </script>
-    <script>
-      $(".has-tooltip").tooltip();
+      $(function(){
+          $('.messages').slimScroll({
+              height: '250px'
+          });
+      });
     </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script>
