Show count of unread messages

--- a/markup/index.html
+++ b/markup/index.html
@@ -44,6 +44,7 @@
         </div>
         <div class="large-6 columns text-right end">
           <div class="dropdown top-nav-icons">
+            <div class="update update-medium update-warning"><span>7</span></div>
             <a data-toggle="dropdown" href="#"><i class="fa fa-bell-o"></i></a>
             <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
               <div class="notifications">
