Add active to sidebar submenu

--- a/markup/index.html
+++ b/markup/index.html
@@ -19,7 +19,7 @@
         <li><i class="fa fa-users"></i> <span>Designers</span> </li>
         <li class="active"><i class="fa fa-barcode"></i> <span>Products</span> </li>
         <ul class="sidenav-submenu">
-          <li><a href="#">Products</a></li>
+          <li class="active"><a href="#">Products</a></li>
           <li><a href="#">Product Images</a></li>
           <li><a href="#">Inventory</a></li>
         </ul>
