--- a/markup/index2.html
+++ b/markup/index2.html
@@ -35,17 +35,17 @@
             <h3><i class="fa fa-barcode"></i> Products</h3>
           </div>
           <div class="large-4 columns text-center">
-            <input type="text" placeholder="Search all data" class="search-all">
-            <button class="btn btn-primary">
-              <i class="fa fa-search"></i>
-            </button>
+            1
           </div>
           <div class="large-6 columns text-right end">
+            <div class="top-nav-icons">
+              <a href="#"><i class="fa fa-search"></i></a>
+            </div>
             <div class="dropdown top-nav-icons">
               <a data-toggle="dropdown" href="#"><i class="fa fa-bell-o"></i></a>
               <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
                 <div class="notifications">
-                  <header>4 Notifications (1 new) </header>
+                  <header>Notifications (7 new) </header>
                   <div class="messages">
                     <li class="unread">
                        <div class="media">
@@ -65,29 +65,83 @@
                         </a>
                         <div class="media-body text-left">
                           <span>New collection SS14 uploaded by Ayaka Nishi</span>
-                          <p class="text-secondary">4 hours ago</p>
                         </div>
                      </div>
                     </li>
                     <li>
                       <div class="media">
                         <a class="pull-left" href="#">
-                          <img class="media-object img-circle" src="https://5825abcc865e52b361d7-6c645f7f037343c7e349cc379f4554d8.ssl.cf1.rackcdn.com//marketing%20banners/Owl_Flat_Blue_Rose4-194.jpg" alt="...">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
                         </a>
                         <div class="media-body text-left">
-                          <span>New marketing view - Celebrate in style</span>
-                          <p class="text-secondary">5 hours ago</p>
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
                         </div>
                      </div>
                     </li>
                     <li>
                       <div class="media">
                         <a class="pull-left" href="#">
-                          <img class="media-object img-circle" src="https://5825abcc865e52b361d7-6c645f7f037343c7e349cc379f4554d8.ssl.cf1.rackcdn.com//marketing%20banners/Owl_Flat_Blue_Rose4-194.jpg" alt="...">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
                         </a>
                         <div class="media-body text-left">
-                          <span>New marketing view - Celebrate in style</span>
-                          <p class="text-secondary">5 hours ago</p>
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                        </div>
+                     </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a class="pull-left" href="#">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                        </a>
+                        <div class="media-body text-left">
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                        </div>
+                     </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a class="pull-left" href="#">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                        </a>
+                        <div class="media-body text-left">
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                        </div>
+                     </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a class="pull-left" href="#">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                        </a>
+                        <div class="media-body text-left">
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                        </div>
+                     </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a class="pull-left" href="#">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                        </a>
+                        <div class="media-body text-left">
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
+                        </div>
+                     </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a class="pull-left" href="#">
+                          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
+                        </a>
+                        <div class="media-body text-left">
+                          <h4 class="media-heading">Media heading</h4>
+                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
                         </div>
                      </div>
                     </li>
@@ -152,34 +206,34 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="large-12 columns">
-            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-             Edit content
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-             <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close large" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Product Description</h4>
-                  </div>
-                  <div class="modal-body">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt sint, ipsa pariatur enim id dolores debitis, eos obcaecati rem nobis corporis ut deleniti beatae modi similique? Suscipit quasi, unde! Nulla.
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                  </div>
-                </div>
-             </div>
-            </div>
-          </div>
-        </div>
       </section>
     </section>
+    <div class="row">
+      <div class="large-12 columns">
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+         Edit content
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close large" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Product Description</h4>
+              </div>
+              <div class="modal-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt sint, ipsa pariatur enim id dolores debitis, eos obcaecati rem nobis corporis ut deleniti beatae modi similique? Suscipit quasi, unde! Nulla.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+         </div>
+        </div>
+      </div>
+    </div>
   </div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -266,27 +320,56 @@
         <script src="../vendors/handsontable/dist/jquery.handsontable.full.js"></script>
         <script>
           var data = [
-            ["1", "Heels", "Apron Black Heels", "Black", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["2", "Heels", "Apron Gainsboro Heels", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["3", "Heels", "Hi Frequen Beaver Booties", "Beaver", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["4", "Heels", "Hi Frequen Gainsboro booties", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["1", "Heels", "Apron Black Heels", "Black", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["2", "Heels", "Apron Gainsboro Heels", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["3", "Heels", "Hi Frequen Beaver Booties", "Beaver", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["4", "Heels", "Hi Frequen Gainsboro booties", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["1", "Heels", "Apron Black Heels", "Black", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["2", "Heels", "Apron Gainsboro Heels", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["3", "Heels", "Hi Frequen Beaver Booties", "Beaver", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["4", "Heels", "Hi Frequen Gainsboro booties", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["1", "Heels", "Apron Black Heels", "Black", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["2", "Heels", "Apron Gainsboro Heels", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. High Heel"],
-            ["3", "Heels", "Hi Frequen Beaver Booties", "Beaver", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-            ["4", "Heels", "Hi Frequen Gainsboro booties", "Gainsboro", "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide covered platform 1 cm/ 0.4 rubber coating platform", "True to size. Italian sizing.High Heel"],
-
+            {
+              sno: "<label for = 'check1'><input id = 'check1' type='checkbox'>1</label>",
+              category: "Heels",
+              prodName: "Apron Black Heels",
+              size: "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide <br>covered platform<br> 1 cm/ 0.4 rubber coating platform ",
+              fit: "True to size. High Heel"
+            },
+            {
+              sno: "<label for = 'check1'><input id = 'check1' type='checkbox'>1</label>",
+              category: "Heels",
+              prodName: "Apron Black Heels",
+              size: "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide <br>covered platform<br> 1 cm/ 0.4 rubber coating platform ",
+              fit: "True to size. High Heel"
+            },
+            {
+              sno: "<label for = 'check1'><input id = 'check1' type='checkbox'>1</label>",
+              category: "Heels",
+              prodName: "Apron Black Heels",
+              size: "Heel measures approx. 11 cm/ 4.3 1 cm/0.4 cowhide <br>covered platform<br> 1 cm/ 0.4 rubber coating platform ",
+              fit: "True to size. High Heel"
+            }
           ];
+
+           function strip_tags(input, allowed) {
+                // +   original by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+                allowed = (((allowed || "") + "").toLowerCase().match(/<[a-z][a-z0-9]*>/g) || []).join(''); // making sure the allowed arg is a string containing only tags in lowercase (<a><b><c>)
+                var tags = /<\/?([a-z][a-z0-9]*)\b[^>]*>/gi,
+                  commentsAndPhpTags = /<!--[\s\S]*?-->|<\?(?:php)?[\s\S]*?\?>/gi;
+                return input.replace(commentsAndPhpTags, '').replace(tags, function ($0, $1) {
+                  return allowed.indexOf('<' + $1.toLowerCase() + '>') > -1 ? $0 : '';
+                });
+              }
+
+          var descriptionRenderer = function (instance, td, row, col, prop, value, cellProperties) {
+            var escaped = Handsontable.helper.stringify(value);
+            escaped = strip_tags(escaped, '<em><b><a><br><i><p>'); //be sure you only allow certain HTML tags to avoid XSS threats (you should also remove unwanted HTML attributes)
+            td.innerHTML = escaped;
+            return td;
+          };
+
           $("#dataTable").handsontable({
             data: data,
-            colHeaders: ["S. No", "Product Category", "Product Name", "Color", "Size", "Fit"]
+            colHeaders: ["S. No", "Product Category", "Product Name", "Color", "Size", "Fit"],
+            columns: [
+              {data: "sno", renderer: descriptionRenderer},
+              {data: "category"},
+              {data: "prodName"},
+              {data: "size", renderer: descriptionRenderer},
+              {data: "fit"}
+            ]
           });
         </script>
         <script>
