Add search button in the top middle

--- a/markup/index.html
+++ b/markup/index.html
@@ -93,7 +93,7 @@
                     </li>
 
                   </div>
-                  <footer>See All</footer>
+                  <footer><a href="#">See All</a></footer>
                 </div>
               </ul>
             </div>
@@ -134,11 +134,6 @@
             </ul>
             <div id="collections-content" class="tab-content">
               <div class="tab-pane fade active in" id="products">
-                <label for="select-all">
-                  <button class="btn btn-secondary">
-                    <input type="checkbox" title="select all" id="select-all">
-                  </button>
-                </label>
                 <div class="row">
                   <div id="dataTable"></div>
                 </div>
